# SeldonFlow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
config/: api_keys_example.yaml  strategy.yaml
src/seldonflow/api_client/: api_client.py  gemini_client.py  kalshi_client.py  order.py  trading_api_client.py
src/seldonflow/data_collection/: data_collector.py  data_manager.py  intraday_nws_data_collector.py  intraday_nws_util.py  kalshi_order_book_collector.py  kalshi_order_book_utils.py  metar_data_collector.py  nws_daily_summary.py  nws_forecast_data_collector.py
src/seldonflow/execution/: execution_manager.py  order.py
src/seldonflow/fees/: kalshi_fees.py
src/seldonflow/platform/: i_platform.py  platform.py
src/seldonflow/research/: nws_daily_summary_analyzer.py  research_manager.py
src/seldonflow/risk/: risk_manager.py
src/seldonflow/scripts/: run.py
src/seldonflow/strategy/: i_strategy.py  start_of_day_temp_predict.py  strategy_manager.py  strategy_types.py  temperature_resting_order_sweep.py  temperature_strat_NYC.py
src/seldonflow/util/: config.py  custom_methods.py  custom_types.py  env.py  logger.py  tick_manager.py  ticker_mapper.py  types.py
src/seldonflow/util/strategy_utils/: NYC_6hr_max_utils.py
tests/: kalshi_orderbook_process_test.py  test_fees.py  test_kalshi_client.py  test_types.py
